name:                site
version:             0.2.0.0
homepage:            https://matsubara0507.github.io
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2016 MATSUBARA Nobutada
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable site
  main-is:           site.hs
  build-depends:     base == 4.*
                   , hakyll == 4.8.*
                   , highlighting-kate
                   , yaml-light
                   , utf8-string
  ghc-options:       -threaded
  default-language:  Haskell2010
